fix(refactor code) changed uuid to id