@@ -4,93 +4,63 @@ import lombok.RequiredArgsConstructor;
 import org.emat.dto.BseAttendanceDTO;
 import org.emat.entity.BseAttendance;
 import org.emat.entity.IndustryAssociationBseRecommendation;
+import org.emat.mapper.BseAttendanceMapper;
 import org.emat.repository.BseAttendanceRepository;
-import org.emat.repository.IndustryAssociationBseRecommendationRepository;
+import org.emat.validator.BseAttendanceValidator;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class BseAttendanceService {
 
     private final BseAttendanceRepository attendanceRepository;
-    private final IndustryAssociationBseRecommendationRepository recommendationRepository;
+    private final BseAttendanceMapper bseAttendanceMapper;
+    private final BseAttendanceValidator bseAttendanceValidator;
 
     public BseAttendanceDTO save(BseAttendanceDTO dto) {
-
         IndustryAssociationBseRecommendation recommendation =
-                recommendationRepository.findById(dto.getBseRecommendationId())
-                        .orElseThrow(() -> new RuntimeException("BSE Recommendation not found"));
+                bseAttendanceValidator.getRecommendationOrThrow(dto.getBseRecommendationId());
 
-        BseAttendance attendance = new BseAttendance();
-        attendance.setBseRecommendation(recommendation);
-        attendance.setAttendanceDate(dto.getAttendanceDate());
-        attendance.setInTime(dto.getInTime());
-        attendance.setOutTime(dto.getOutTime());
+        BseAttendance attendance = bseAttendanceMapper.toEntity(dto, recommendation);
 
         attendance = attendanceRepository.save(attendance);
 
-        return mapToDTO(attendance);
+        return bseAttendanceMapper.toDto(attendance);
     }
 
-    public BseAttendanceDTO update(UUID id, BseAttendanceDTO dto) {
-
-        BseAttendance attendance = attendanceRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Attendance not found"));
-
+    public BseAttendanceDTO update(Long id, BseAttendanceDTO dto) {
+        BseAttendance attendance = bseAttendanceValidator.getAttendanceOrThrow(id);
         IndustryAssociationBseRecommendation recommendation =
-                recommendationRepository.findById(dto.getBseRecommendationId())
-                        .orElseThrow(() -> new RuntimeException("BSE Recommendation not found"));
+                bseAttendanceValidator.getRecommendationOrThrow(dto.getBseRecommendationId());
 
-        attendance.setBseRecommendation(recommendation);
-        attendance.setAttendanceDate(dto.getAttendanceDate());
-        attendance.setInTime(dto.getInTime());
-        attendance.setOutTime(dto.getOutTime());
+        bseAttendanceMapper.updateEntityFromRequest(dto, attendance, recommendation);
 
         attendance = attendanceRepository.save(attendance);
 
-        return mapToDTO(attendance);
+        return bseAttendanceMapper.toDto(attendance);
     }
 
-    public BseAttendanceDTO getById(UUID id) {
-
-        return attendanceRepository.findById(id)
-                .map(this::mapToDTO)
-                .orElseThrow(() -> new RuntimeException("Attendance not found"));
+    public BseAttendanceDTO getById(Long id) {
+        return bseAttendanceMapper.toDto(bseAttendanceValidator.getAttendanceOrThrow(id));
     }
 
-    public List<BseAttendanceDTO> getByRecommendation(UUID recommendationId) {
-
-        return attendanceRepository.findByBseRecommendationUuid(recommendationId)
+    public List<BseAttendanceDTO> getByRecommendation(Long recommendationId) {
+        return attendanceRepository.findByBseRecommendationId(recommendationId)
                 .stream()
-                .map(this::mapToDTO)
-                .collect(Collectors.toList());
+                .map(bseAttendanceMapper::toDto)
+                .toList();
     }
 
     public List<BseAttendanceDTO> getAll() {
-
         return attendanceRepository.findAll()
                 .stream()
-                .map(this::mapToDTO)
-                .collect(Collectors.toList());
+                .map(bseAttendanceMapper::toDto)
+                .toList();
     }
 
-    public void delete(UUID id) {
-
+    public void delete(Long id) {
         attendanceRepository.deleteById(id);
-    }
-
-    private BseAttendanceDTO mapToDTO(BseAttendance attendance) {
-
-        return BseAttendanceDTO.builder()
-                .uuid(attendance.getUuid())
-                .bseRecommendationId(attendance.getBseRecommendation().getUuid())
-                .attendanceDate(attendance.getAttendanceDate())
-                .inTime(attendance.getInTime())
-                .outTime(attendance.getOutTime())
-                .build();
     }
 }
